--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <hr>
 
     <div class="hot_drink">
-        <h1>HOT DRINK</h1>
+        <h1>HOT DRINK :</h1>
         <ul>
             <li>
                 <div class="item-container">
@@ -111,7 +111,7 @@
 
     <div class="am"></div>
     <div class="cold-drink">
-        <h1>COLD DRINK</h1>
+        <h1>COLD DRINK :</h1>
         <ul>
             <li>
                 <div class="item-container">
